fix scrollbar overflow

--- a/src/styling/App.css
+++ b/src/styling/App.css
@@ -107,6 +107,7 @@ textarea {
 
 .listViewer {
   width: calc(100%);
+  height: 100%;
   background-color: #efefef;
   border-radius: 3px;
   overflow: hidden;
@@ -296,40 +297,6 @@ textarea {
   font-family: "Roboto";
   font-size: 20px;
   overflow-y: auto;
-  -webkit-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-          box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-}
-
-#analytics {
-  height: calc(100% - 50px);
-  font-family: "Roboto";
-  font-size: 15px;
-  overflow-y: auto;
-  -webkit-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-          box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-}
-
-#analytics .config {
-  vertical-align: top;
-  -webkit-box-flex: 1;
-      -ms-flex: 1 1 40%;
-          flex: 1 1 40%;
-  padding: 7px;
-}
-
-#analytics .chartContainer {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 1 40%;
-          flex: 1 1 40%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
 }
 
 #adminHome .topGrid {
@@ -338,6 +305,7 @@ textarea {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  height: 100%;
 }
 
 #adminHome .leftColumn {
@@ -349,6 +317,7 @@ textarea {
 }
 
 #adminHome .middleColumn {
+  height: 100%;
   -webkit-box-flex: 1;
       -ms-flex: 1 1 50%;
           flex: 1 1 50%;
@@ -413,6 +382,7 @@ textarea {
   }
   #adminHome .leftColumn {
     margin: 0;
+    height: 400px;
   }
   #adminHome .leftColumn .notifContainer {
     height: 350px;
@@ -1100,11 +1070,6 @@ textarea {
   background-color: #dadada;
 }
 
-/* #chart {
-  width: 900px;
-  height: 500px;
-} */
-/*# sourceMappingURL=App.css.map */
 #InfoPage .container {
   margin-top: 20px;
   color: #7ba1ff;
